[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Room.gd" type="Script" id=1]

[node name="Room" type="Node2D"]
script = ExtResource( 1 )

[node name="Monsters" type="Node2D" parent="."]
position = Vector2( 424, 80 )

[node name="DoneButton" type="Button" parent="."]
margin_left = 921.04
margin_top = 533.936
margin_right = 967.04
margin_bottom = 553.936
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cards" type="HBoxContainer" parent="."]
margin_left = 124.14
margin_top = 425.814
margin_right = 124.14
margin_bottom = 425.814
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionBar" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 490.109
margin_top = 572.004
margin_right = 563.109
margin_bottom = 592.004
__meta__ = {
"_edit_use_anchors_": false
}

[node name="APLabel" type="Label" parent="ActionBar"]
margin_top = 3.0
margin_right = 17.0
margin_bottom = 17.0
text = "AP"

[node name="AttackButton" type="Button" parent="ActionBar"]
margin_left = 21.0
margin_right = 73.0
margin_bottom = 20.0
disabled = true
text = "Attack"
[connection signal="pressed" from="DoneButton" to="." method="_on_DoneButton_pressed"]
